feat: use /function to run custom lighthouse audit function
In order to work around limitations with the public browserless
API (browserless/chrome#317), use a custom function and the /function
endpoint to support user-supplied audit configurations.

fixes #2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,13 @@ services:
       AUDIT_URL: ${AUDIT_URL:-https://www.browserless.io/}
     volumes:
       - './index.js:/usr/src/app/index.js:ro'
-      - './audit-config.js:/usr/src/app/audit-config.js'
+      - './lib:/usr/src/app/lib:ro'
     depends_on:
       - browserless
 
   browserless:
     image: browserless/chrome
     environment:
+      FUNCTION_EXTERNALS: '["lighthouse"]'
       PORT: 3000
     shm_size: 1gb
