--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {},
   "dependencies": {
+    "got": "^9.6.0",
     "hard-rejection": "^2.1.0",
     "lighthouse": "^5.2.0"
   }
